# QtPdfAnnotator

./: CMakeLists.txt  PKGBUILD  main.cpp
.github/workflows/: release.yml
